--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,11 +1,11 @@
 @import "_variables";
 
 body {
-    margin: 0 15vw;
+    margin: 0, auto;
     min-height: 100vh;
     min-height: $xlarge;
     padding: 3rem 1.5rem;
-    font-family: var(--font-inter),ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    font-family: sans-serif;
     font-feature-settings: "ss03","cv02","cv11";
 
     @media screen and (min-width: $medium) {
@@ -13,6 +13,7 @@ body {
     };
 
     @media screen and (min-width: $large) {
+        margin: 0 15vw;
         padding: 0rem 6rem;
     };
 }
