--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -3,7 +3,7 @@
 body {
     margin: 0, auto;
     min-height: 100vh;
-    min-height: $xlarge;
+    max-width: $xlarge;
     padding: 3rem 1.5rem;
     font-family: sans-serif;
     font-feature-settings: "ss03","cv02","cv11";
@@ -13,7 +13,6 @@ body {
     };
 
     @media screen and (min-width: $large) {
-        margin: 0 15vw;
         padding: 0rem 6rem;
     };
 }
