--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,18 +1,18 @@
-@import "_variables";
+@use "_variable.scss" as _variable;
 
 body {
     margin: 0, auto;
     min-height: 100vh;
-    max-width: $xlarge;
+    max-width: _variable.$xlarge;
     padding: 3rem 1.5rem;
     font-family: sans-serif;
     font-feature-settings: "ss03","cv02","cv11";
 
-    @media screen and (min-width: $medium) {
+    @media screen and (min-width: _variable.$medium) {
         padding: 5rem 3rem;
     };
 
-    @media screen and (min-width: $large) {
+    @media screen and (min-width: _variable.$large) {
         margin: 0 15vw;
         padding: 0rem 6rem;
     };
@@ -42,9 +42,19 @@ body {
 }
 
 .App {
-    @media screen and (min-width: $large) {
+    @media screen and (min-width: _variable.$large) {
         display: flex;
         justify-content: space-between;
         gap: 1rem;
+    };
+}
+
+.MainContent {
+    padding-top: 6rem; /* pt-24 */
+
+    @media screen and (min-width: _variable.$large) {
+        width: 50%; /* lg:w-1/2 */
+        padding-top: 6rem; /* lg:py-24 (padding top) */
+        padding-bottom: 6rem; /* lg:py-24 (padding bottom) */
     };
 }
