--- a/src/components/Containers/Containers.module.scss
+++ b/src/components/Containers/Containers.module.scss
@@ -22,7 +22,6 @@
     margin-right: -1.5rem; /* -mx-6 */
     margin-bottom: 1rem; /* mb-4 */
     width: 100vw; /* w-screen */
-    // background-color: rgba(31, 41, 55, 0.75); /* bg-slate-900/75 (using rgba for transparency) */
     padding-left: 1.5rem; /* px-6 */
     padding-right: 1.5rem; /* px-6 */
     padding-top: 1.25rem; /* py-5 */
@@ -49,4 +48,8 @@
         padding-bottom: 0; /* lg:py-0 */
         opacity: 0; /* lg:opacity-0 */
     }
+}
+
+.wordblock {
+    margin-bottom: 1rem; /* mb-4 */
 }
