--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -16,22 +16,27 @@
 
 .title {
     font-size: 2.25rem; /* text-4xl */
-    font-weight: bold; /* font-bold */
-    letter-spacing: -0.01562em; /* tracking-tight */
+    line-height: 2.25rem;;
+    font-weight: 700; /* font-bold */
+    letter-spacing: -0.025em; /* tracking-tight */
+    color: _variable.$highlight;
 
     @media screen and (min-width: _variable.$small) {
         font-size: 3rem; /* lg:text-5xl */
+        line-height: 1;
     };
 }
 
 .subtitle {
     margin-top: 0.75rem; /* mt-3 */
     font-size: 1.125rem; /* text-lg */
-    font-weight: 500; /* font-medium */
-    letter-spacing: -0.01562em; /* tracking-tight */
+    font-weight: 525; /* font-medium */
+    letter-spacing: -0.025em; /* tracking-tight */
+    color: _variable.$highlight;
 
     @media screen and (min-width: _variable.$small) {
         font-size: 1.25rem; /* lg:text-xl */
+        line-height: 1.75rem;
     };
 }
 
@@ -67,7 +72,7 @@
     margin-right: 1rem; /* mr-4 */
     height: 1px; /* h-px */
     width: 2rem; /* w-8 */
-    background-color: #4b5563; /* bg-slate-600 */
+    background-color: _variable.$highlight; /* bg-slate-600 */
     transition: all 0.2s ease; /* transition-all */
 
     @media (prefers-reduced-motion: reduce) {
@@ -86,13 +91,13 @@
     font-weight: bold; /* font-bold */
     text-transform: uppercase; /* uppercase */
     letter-spacing: 0.1em; /* tracking-widest */
-    color: #6b7280; /* text-slate-500 */
+    color: _variable.$main-content; /* text-slate-500 */
 }
 
 /* Styles for when the parent with class 'group' is hovered or focused */
 .jumplinkitem:hover .navtext,
 .jumplinkitem:focus-visible .navtext {
-    color: black; /* group-hover:text-slate-200 */
+    color: _variable.$highlight; /* group-hover:text-slate-200 */
 }
 
 .sociallinks {
@@ -112,8 +117,20 @@
 
 .sociallinkicon {
     font-size: 2rem; /* text-xs */
+    color: _variable.$main-content;
 
     &:hover {
-        color: #e2e8f0; /* hover:text-slate-200 */
+        color: _variable.$highlight; /* hover:text-slate-200 */
     }
+}
+
+.sociallinkindicator {
+    position: absolute; /* Take the element out of the normal flow */
+    width: 1px; /* Make it very small */
+    height: 1px; /* Make it very small */
+    margin: -1px; /* Remove any margin */
+    padding: 0; /* Remove padding */
+    overflow: hidden; /* Prevent any overflow */
+    clip: rect(0, 0, 0, 0); /* Clip the element to zero dimensions */
+    border: 0; /* Remove border */
 }
