--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -1,5 +1,11 @@
+// size
 $small: 640px;
 $medium: 768px;
 $large: 1024px;
 $xlarge: 1280px;
 $xxlarge: 1536px;
+
+// color
+$main-content: #4b5563;
+$de-emphasize1: #6b7280;
+$highlight: black;
