--- a/src/components/Containers/Containers.module.scss
+++ b/src/components/Containers/Containers.module.scss
@@ -26,7 +26,7 @@
     padding-right: 1.5rem; /* px-6 */
     padding-top: 1.25rem; /* py-5 */
     padding-bottom: 1.25rem; /* py-5 */
-    transition: backdrop-filter 0.5s; /* transition duration-500 */
+    transition: backdrop-filter 0s;
 
     &.notPinned{
         backdrop-filter: none; /* backdrop-none */
