--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -6,5 +6,7 @@ $xlarge: 1280px;
 $xxlarge: 1536px;
 
 // color
-$main-content: #4b5563;
-$highlight: black;
+$main-content: #EFF1F3;
+$highlight: #009FB7;
+$special: #FED766;
+$background: #272727;
