--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -6,6 +6,7 @@
 
 blockquote, dd, dl, figure, h1, h2, h3, h4, h5, h6, hr, p, pre {
     margin: 0;
+    color: _variable.$main-content;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -19,6 +20,7 @@ body {
     margin: 0;
     line-height: 1.625; /* leading-relaxed */
     -webkit-font-smoothing: antialiased; /* antialiased */
+    background-color: _variable.$background;
 }
 
 .App {
@@ -48,8 +50,8 @@ a {
     top: 0;
     display: block;
     transform: translateX(-100%);
-    border-radius: 0.375rem;
-    background: white;
+    border-radius: 0.25rem;
+    background: _variable.$background;
     padding-left: 1rem;
     padding-right: 1rem;
     padding-top: 0.75rem;
