--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -61,13 +61,6 @@
     padding: 0; /* p-0 */
 }
 
-.jumplinkitem {
-    display: flex; /* flex */
-    align-items: center; /* items-center */
-    padding-top: 0.75rem; /* py-3 (padding top and bottom) */
-    padding-bottom: 0.75rem; /* py-3 */
-}
-
 .navindicator {
     margin-right: 1rem; /* mr-4 */
     height: 1px; /* h-px */
@@ -80,12 +73,6 @@
     };
 }
 
-/* Styles for when the parent with class 'group' is hovered or focused */
-.jumplinkitem:hover .navindicator,
-.jumplinkitem:focus-visible .navindicator {
-    width: 4rem; /* group-hover:w-16 (16 * 0.25rem = 4rem) */
-}
-
 .navtext {
     font-size: 0.75rem; /* text-xs */
     font-weight: bold; /* font-bold */
@@ -94,10 +81,31 @@
     color: _variable.$main-content; /* text-slate-500 */
 }
 
-/* Styles for when the parent with class 'group' is hovered or focused */
-.jumplinkitem:hover .navtext,
-.jumplinkitem:focus-visible .navtext {
-    color: _variable.$highlight; /* group-hover:text-slate-200 */
+.jumplinkitem {
+    display: flex; /* flex */
+    align-items: center; /* items-center */
+    padding-top: 0.75rem; /* py-3 (padding top and bottom) */
+    padding-bottom: 0.75rem; /* py-3 */
+
+    &:hover .navindicator,
+    &:focus-visible .navindicator,
+    &.active .navindicator {
+        width: 4rem;
+    }
+
+    &:hover .navtext,
+    &:focus-visible .navtext,
+    &.active .navtext {
+        color: _variable.$highlight;
+    }
+}
+
+.current .navtext {
+    color: _variable.$highlight;
+}
+
+.current .navindicator {
+    width: 4rem;
 }
 
 .sociallinks {
