--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -14,6 +14,10 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: inherit;
 }
 
+ol, ul {
+    padding: 0 0 0 0;
+}
+
 body {
     tab-size: 4;
     font-variation-settings: normal;
@@ -84,4 +88,25 @@ a {
         padding-top: 6rem; /* lg:py-24 (padding top) */
         padding-bottom: 6rem; /* lg:py-24 (padding bottom) */
     };
+}
+
+.background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.25); /* Semi-transparent dark overlay */
+    pointer-events: none; /* Allow clicks to pass through */
+    z-index: -1;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(2px); /* Semi-transparent light overlay */
+    z-index: -1;
 }
